altered book review DRAFT to convert to PDF

--- a/docs/churchil_orwell_style.css
+++ b/docs/churchil_orwell_style.css
@@ -3,8 +3,8 @@
 
 * {
     box-sizing: border-box;
-    color: white;
-    background-color: #1C1E1F;
+    /* color: white; */
+    /* background-color: #1C1E1F; */
     font-family: 'Times New Roman', Times, serif;
     font-size: 12pt;
     line-height: 2;
