--- a/docs/churchil_orwell_style.css
+++ b/docs/churchil_orwell_style.css
@@ -8,6 +8,7 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: 12pt;
     line-height: 2;
+    /* letter-spacing: 0.05em; */
 }
 body {
     margin-left: 4rem;
@@ -34,4 +35,6 @@ body {
     margin: 2rem;
 }
 
-
+span{
+    font-style: italic;
+}
