--- a/docs/churchil_orwell_style.css
+++ b/docs/churchil_orwell_style.css
@@ -11,7 +11,10 @@
     /* letter-spacing: 0.05em; */
 }
 body {
-    margin-left: 4rem;
+    /* overflow: hidden; */
+    margin: 0;
+    /* padding-left: 2rem; */
+    /* text-align: center; */
 }
 
 .page-index {
